tests/fixtures/invalid/bytes_floordiv_list.py
# Cannot floor divide Bytes and List[int]
x: bytes = b"hello" // [1, 2, 3]
